SampleCode/SUSIDemo_C/Susi4.h

/*
 *  Susi Types
 */
typedef uint32_t SusiStatus_t;
typedef uint32_t SusiId_t;
#define SUSI_ID_HWM_FAN_CPU						((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 0))			/* RPM */
#define SUSI_ID_STORAGE_STD				((SusiId_t)0x00000000)
#define SUSI_ID_STORAGE_OEM0			((SusiId_t)0x00000001)
#define SUSI_ID_STORAGE_OEM1			((SusiId_t)0x00000002)
/* Storage value item IDs */
#define SUSI_ID_STORAGE_TOTAL_SIZE		0x00000000
#define SUSI_ID_STORAGE_BLOCK_SIZE		0x00000001
#define SUSI_ID_STORAGE_LOCK_STATUS		0x00010000
#define SUSI_ID_STORAGE_PSW_MAX_LEN		0x00010001
#define SUSI_STORAGE_STATUS_LOCK		1
#define SUSI_STORAGE_STATUS_UNLOCK		0
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pValue==NULL									| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiStorageGetCaps(
	SusiId_t Id,		/* IN	Storage Id */
	uint32_t ItemId,	/* IN	Value item Id */
	uint32_t *pValue	/* OUT	Return Value */
	);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pBuffer==NULL								| SUSI_STATUS_INVALID_PARAMETER
// BufLen==0									| SUSI_STATUS_INVALID_PARAMETER
// Offset+BufLen>TotalSize						| SUSI_STATUS_INVALID_BLOCK_LENGTH
// Read error									| SUSI_STATUS_READ_ERROR
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiStorageAreaRead(
	SusiId_t Id,		/* IN	Storage Area Id */
	uint32_t Offset,	/* IN	Byte Offset */
	uint8_t *pBuffer, 	/* OUT	Pointer to Data pBuffer */
	uint32_t BufLen  	/* IN	Read Data count */ 
);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pBuffer==NULL								| SUSI_STATUS_INVALID_PARAMETER
// BufLen==0									| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiStorageAreaWrite(
	SusiId_t Id,		/* IN	Storage Area Id */
	uint32_t Offset,	/* IN	Byte Offset */
	uint8_t *pBuffer, 	/* IN	Pointer to Data pBuffer */
	uint32_t BufLen  	/* IN	Write Data count */
	);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pBuffer==NULL								| SUSI_STATUS_INVALID_PARAMETER
// BufLen==0									| SUSI_STATUS_INVALID_PARAMETER
// Unlock error									| SUSI_STATUS_WRITE_ERROR
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiStorageAreaSetUnlock(
	SusiId_t Id,		/* IN	Storage Area Id */
	uint8_t *pBuffer, 	/* IN	Pointer to Data pBuffer */
	uint32_t BufLen  	/* IN	Buffer length */ 
	);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pBuffer==NULL								| SUSI_STATUS_INVALID_PARAMETER
// BufLen==0									| SUSI_STATUS_INVALID_PARAMETER
// Lock error									| SUSI_STATUS_WRITE_ERROR
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiStorageAreaSetLock(
	SusiId_t Id,		/* IN	Storage Area Id */
	uint8_t *pBuffer, 	/* IN	Pointer to Data pBuffer */
	uint32_t BufLen  	/* IN	Buffer length */ 
	);
/*=============================================================================
// Fan Control
//=============================================================================
*/

/* Fan control value item IDs */
#define SUSI_ID_FC_CONTROL_SUPPORT_FLAGS		0x00000000	/* Reference "Control Support Flags" */
#define SUSI_ID_FC_AUTO_SUPPORT_FLAGS			0x00000001	/* Reference "Auto Support Flags" */
/* Control Support Flags */
#define SUSI_FC_FLAG_SUPPORT_OFF_MODE			(1 << 0)	/* Support OFF mode */
#define SUSI_FC_FLAG_SUPPORT_FULL_MODE			(1 << 1)	/* Support FULL mode */
#define SUSI_FC_FLAG_SUPPORT_MANUAL_MODE		(1 << 2)	/* Support Manual mode */
#define SUSI_FC_FLAG_SUPPORT_AUTO_MODE			(1 << 3)	/* Support Auto mode */
/* Auto Support Flags */
#define SUSI_FC_FLAG_SUPPORT_AUTO_LOW_STOP		(1 << 0)	/* Support Low Stop Behavior (Depend on Auto mode) */
#define SUSI_FC_FLAG_SUPPORT_AUTO_LOW_LIMIT		(1 << 1)	/* Support Low Limit Behavior (Depend on Auto mode) */
#define SUSI_FC_FLAG_SUPPORT_AUTO_HIGH_LIMIT	(1 << 2)	/* Support High Limit Behavior (Depend on Auto mode) */
#define SUSI_FC_FLAG_SUPPORT_AUTO_PWM			(1 << 8)	/* Support PWM operate mode (Depend on Auto mode) */
#define SUSI_FC_FLAG_SUPPORT_AUTO_RPM			(1 << 9)	/* Support RPM operate mode (Depend on Auto mode) */
/* Note:
//	Item ID also can use SUSI_ID_HWM_TEMP_XXX to get is it support in this function or not.

// Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pValue==NULL									| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiFanControlGetCaps( 
	SusiId_t Id,		/* IN	Thermal Id */
	uint32_t ItemId,	/* IN	Value item Id */
	uint32_t *pValue	/* OUT	Return Value */
	);
#define SUSI_FAN_AUTO_CTRL_OPMODE_PWM	0
#define SUSI_FAN_AUTO_CTRL_OPMODE_RPM	1
															
typedef struct _AutoFan {
	uint32_t TmlSource;		/* Thermal Source (Mapping to SUSI_ID_HWM_FAN_XXX) */
	uint32_t OpMode;
	uint32_t LowStopLimit;	/* Temperature (0.1 Kelvins) */
	uint32_t LowLimit;		/* Temperature (0.1 Kelvins) */
	uint32_t HighLimit;		/* Temperature (0.1 Kelvins) */
	uint32_t MinPWM;		/* Enable when OpMode == FAN_AUTO_CTRL_OPMODE_PWM */
	uint32_t MaxPWM;		/* Enable when OpMode == FAN_AUTO_CTRL_OPMODE_PWM */
	uint32_t MinRPM;		/* Enable when OpMode == FAN_AUTO_CTRL_OPMODE_RPM */
	uint32_t MaxRPM;		/* Enable when OpMode == FAN_AUTO_CTRL_OPMODE_RPM */
} AutoFan , *PAutoFan ;
/* Mode */
#define SUSI_FAN_CTRL_MODE_OFF			0
#define SUSI_FAN_CTRL_MODE_FULL			1
#define SUSI_FAN_CTRL_MODE_MANUAL		2
#define SUSI_FAN_CTRL_MODE_AUTO			3
typedef struct _SusiFanControl {
	uint32_t Mode;
	uint32_t PWM;			/* Manual mode only (0 - 100%) */
	AutoFan AutoControl;	/* Auto mode only */
} SusiFanControl, *PSusiFanControl;
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pConfig==NULL								| SUSI_STATUS_INVALID_PARAMETER
// pConfig->Size Invalid						| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiFanControlGetConfig(
	SusiId_t Id,				/* IN	Fan Id */
	SusiFanControl *pConfig		/* OUT	Fan config */
	);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pConfig==NULL								| SUSI_STATUS_INVALID_PARAMETER
// pConfig->Size Invalid						| SUSI_STATUS_INVALID_PARAMETER
// Config Invalid								| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiFanControlSetConfig(
	SusiId_t Id,				/* IN	Fan Id */
	SusiFanControl *pConfig		/* IN	Fan config */
	);
/*=============================================================================
// Thermal Protect
//=============================================================================
*/
#define SUSI_ID_THERMAL_MAX						4		
#define SUSI_ID_THERMAL_PROTECT_1				((SusiId_t)0)
#define SUSI_ID_THERMAL_PROTECT_2				((SusiId_t)1)
#define SUSI_ID_THERMAL_PROTECT_3				((SusiId_t)2)
#define SUSI_ID_THERMAL_PROTECT_4				((SusiId_t)3)
/* Thermal Protection value item IDs */
#define SUSI_ID_TP_EVENT_SUPPORT_FLAGS			0x00000000	/* Reference "Support Flags" */
#define SUSI_ID_TP_EVENT_TRIGGER_MAXIMUM		0x00000001	/* Send Event */
#define SUSI_ID_TP_EVENT_TRIGGER_MINIMUM		0x00000002
#define SUSI_ID_TP_EVENT_CLEAR_MAXIMUM			0x00000003
#define SUSI_ID_TP_EVENT_CLEAR_MINIMUM			0x00000004
/* Support Flags */
#define SUSI_THERMAL_FLAG_SUPPORT_SHUTDOWN		(1 << 0)
#define SUSI_THERMAL_FLAG_SUPPORT_THROTTLE		(1 << 1)
#define SUSI_THERMAL_FLAG_SUPPORT_POWEROFF		(1 << 2)
/* Note:
//	Item ID also can use SUSI_ID_HWM_TEMP_XXX to get is it support in this function or not.

// Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pValue==NULL									| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiThermalProtectionGetCaps( 
	SusiId_t Id,		/* IN	Thermal Id */
	uint32_t ItemId,	/* IN	Value item Id */
	uint32_t *pValue	/* OUT	Return Value */
	);
/* Thermal Protection Event type */
#define SUSI_THERMAL_EVENT_SHUTDOWN				0x00
#define SUSI_THERMAL_EVENT_THROTTLE				0x01
#define SUSI_THERMAL_EVENT_POWEROFF				0x02
#define SUSI_THERMAL_EVENT_NONE					0xFF
typedef struct _SusiThermalProtect{
	uint32_t SourceId;					/* Reference SUSI_ID_HWM_TEMP_XXX */
	uint32_t EventType;
	uint32_t SendEventTemperature;		/* 0.1 Kelvins */
	uint32_t ClearEventTemperature;		/* 0.1 Kelvins */
} SusiThermalProtect, *PSusiThermalProtect;
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pConfig==NULL								| SUSI_STATUS_INVALID_PARAMETER
// pConfig->Size Invalid						| SUSI_STATUS_INVALID_PARAMETER
// Config Invalid								| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiThermalProtectionSetConfig(
	SusiId_t Id,				/* IN	Thermal Id */
	SusiThermalProtect *pConfig	/* IN	Thermal config */
	);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pConfig==NULL								| SUSI_STATUS_INVALID_PARAMETER
// pConfig->Size Invalid						| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiThermalProtectionGetConfig(
	SusiId_t Id,				/* IN	Thermal Id */
	SusiThermalProtect *pConfig	/* OUT	Thermal config */
	);
/*=============================================================================
// WDT
//=============================================================================
*/
#define SUSI_ID_WATCHDOG_MAX				4
#define SUSI_ID_WATCHDOG_1					((SusiId_t)0)
#define SUSI_ID_WATCHDOG_2					((SusiId_t)1)
#define SUSI_ID_WATCHDOG_3					((SusiId_t)2)
#define SUSI_ID_WATCHDOG_4					((SusiId_t)3)
/* WDT value item IDs */
#define SUSI_ID_WDT_SUPPORT_FLAGS			0x00000000	/* Reference "Support Flags" */
#define SUSI_ID_WDT_DELAY_MAXIMUM			0x00000001
#define SUSI_ID_WDT_DELAY_MINIMUM			0x00000002
#define SUSI_ID_WDT_EVENT_MAXIMUM			0x00000003
#define SUSI_ID_WDT_EVENT_MINIMUM			0x00000004
#define SUSI_ID_WDT_RESET_MAXIMUM			0x00000005
#define SUSI_ID_WDT_RESET_MINIMUM			0x00000006
#define SUSI_ID_WDT_UNIT_MINIMUM			0x0000000F
#define SUSI_ID_WDT_DELAY_TIME				0x00010001
#define SUSI_ID_WDT_EVENT_TIME				0x00010002
#define SUSI_ID_WDT_RESET_TIME				0x00010003
#define SUSI_ID_WDT_EVENT_TYPE				0x00010004
/* Support Flags */
#define SUSI_WDT_FLAG_SUPPORT_IRQ			(1 << 1)
#define SUSI_WDT_FLAG_SUPPORT_SCI			(1 << 2)
#define SUSI_WDT_FLAG_SUPPORT_PWRBTN		(1 << 3)
#define SUSI_WDT_FLAG_SUPPORT_PIN			(1 << 4)
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// pValue==NULL									| SUSI_STATUS_INVALID_PARAMETER
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiWDogGetCaps( 
	SusiId_t Id,		/* IN	WDog Id */
	uint32_t ItemId,	/* IN	Value item Id */
	uint32_t *pValue	/* OUT	Return Value */
	);
/* Event Types */
#define SUSI_WDT_EVENT_TYPE_NONE			0x00000000
#define SUSI_WDT_EVENT_TYPE_IRQ				0x00000001
#define SUSI_WDT_EVENT_TYPE_SCI				0x00000002
#define SUSI_WDT_EVENT_TYPE_PWRBTN			0x00000003
#define SUSI_WDT_EVENT_TYPE_PIN				0x00000004
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Running										| SUSI_STATUS_RUNNING
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiWDogStart( 
	SusiId_t Id,		/* IN	WDog Id */
	uint32_t DelayTime,	/* IN	Value delay time */
	uint32_t EventTime,	/* IN	Value event time */
	uint32_t ResetTime,	/* IN	Value reset time */
	uint32_t EventType	/* IN	Determine event type */
	);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiWDogStop( 
	SusiId_t Id		/* IN	WDog Id */
	);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiWDogTrigger( 
	SusiId_t Id		/* IN	WDog Id */
	);
typedef void (SUSI_API *SUSI_WDT_INT_CALLBACK)(void*);
/* Condition									| Return Values 
// ---------------------------------------------+------------------------------
// Library Uninitialized						| SUSI_STATUS_NOT_INITIALIZED
// Unknown Id									| SUSI_STATUS_UNSUPPORTED
// Else											| SUSI_STATUS_SUCCESS
*/
SusiStatus_t SUSI_API SusiWDogSetCallBack( 
	SusiId_t Id,						/* IN	WDog Id */
	SUSI_WDT_INT_CALLBACK pfnCallback,	/* IN	WDog INT event callback */
	void *Context						/* IN	WDog INT event callback context */
	);