SampleCode/SUSIDemo_C#/SusiCommon/Susi4.cs


        public const UInt32 SUSI_ID_STORAGE_STD = 0x00000000;
        public const UInt32 SUSI_ID_STORAGE_OEM0 = 0x00000001;
        public const UInt32 SUSI_ID_STORAGE_OEM1 = 0x00000002;

        // Item ID
        public const UInt32 SUSI_ID_STORAGE_TOTAL_SIZE = 0x00000000;
        public const UInt32 SUSI_ID_STORAGE_BLOCK_SIZE = 0x00000001;
        public const UInt32 SUSI_ID_STORAGE_LOCK_STATUS = 0x00010000;
        public const UInt32 SUSI_ID_STORAGE_PSW_MAX_LEN = 0x00010001;
        // Lock status
        public const UInt32 SUSI_STORAGE_STATUS_LOCK = 1;
        public const UInt32 SUSI_STORAGE_STATUS_UNLOCK = 0;
        [DllImport("Susi4")]
        public static extern UInt32 SusiStorageGetCaps(UInt32 Id, UInt32 ItemId, out UInt32 pValue);

        [DllImport("Susi4")]
        public static extern UInt32 SusiStorageAreaRead(UInt32 Id, UInt32 Offset, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 3)] byte[] pBuffer, UInt32 BufLen);

        [DllImport("Susi4")]
        public static extern UInt32 SusiStorageAreaWrite(UInt32 Id, UInt32 Offset, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 3)] byte[] pBuffer, UInt32 BufLen);

        [DllImport("Susi4")]
        public static extern UInt32 SusiStorageAreaSetUnlock(UInt32 Id, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] byte[] pBuffer, UInt32 BufLen);

        [DllImport("Susi4")]
        public static extern UInt32 SusiStorageAreaSetLock(UInt32 Id, [MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] byte[] pBuffer, UInt32 BufLen);
    }

    public static class SusiFan
    {
        // ID same as SUSI_ID_HWM_FAN_XXX, Example: SUSI_ID_HWM_FAN_CPU

        // Fan control value item IDs
        public const UInt32 SUSI_ID_FC_CONTROL_SUPPORT_FLAGS = 0x00000000;  // Reference "Control Support Flags"
        public const UInt32 SUSI_ID_FC_AUTO_SUPPORT_FLAGS = 0x00000001;	    // Reference "Auto Support Flags"

        // Control Support Flags
        public const UInt32  SUSI_FC_FLAG_SUPPORT_OFF_MODE = (1 << 0);	    // Support OFF mode
        public const UInt32  SUSI_FC_FLAG_SUPPORT_FULL_MODE = (1 << 1);	    // Support FULL mode
        public const UInt32  SUSI_FC_FLAG_SUPPORT_MANUAL_MODE = (1 << 2);	// Support Manual mode
        public const UInt32  SUSI_FC_FLAG_SUPPORT_AUTO_MODE = (1 << 3);	    // Support Auto mode

        // Auto Support Flags
        public const UInt32  SUSI_FC_FLAG_SUPPORT_AUTO_LOW_STOP = (1 << 0);	    // Support Low Stop Behavior (Depend on Auto mode)
        public const UInt32  SUSI_FC_FLAG_SUPPORT_AUTO_LOW_LIMIT = (1 << 1);	// Support Low Limit Behavior (Depend on Auto mode)
        public const UInt32  SUSI_FC_FLAG_SUPPORT_AUTO_HIGH_LIMIT = (1 << 2);	// Support High Limit Behavior (Depend on Auto mode)
        public const UInt32  SUSI_FC_FLAG_SUPPORT_AUTO_PWM = (1 << 8);	        // Support PWM operate mode (Depend on Auto mode)
        public const UInt32 SUSI_FC_FLAG_SUPPORT_AUTO_RPM = (1 << 9);	        // Support RPM operate mode (Depend on Auto mode)

        [DllImport("Susi4")]
        public static extern UInt32 SusiFanControlGetCaps(UInt32 Id, UInt32 ItemId, out UInt32 pValue);


        public const UInt32 SUSI_FAN_AUTO_CTRL_OPMODE_PWM = 0;
        public const UInt32 SUSI_FAN_AUTO_CTRL_OPMODE_RPM = 1;
        public struct AutoFan
        {
            public UInt32 TmlSource;
            public UInt32 OpMode;
            public UInt32 LowStopLimit;	    // Temperature (0.1 Kelvins)
            public UInt32 LowLimit;		    // Temperature (0.1 Kelvins)
            public UInt32 HighLimit;		// Temperature (0.1 Kelvins)
            public UInt32 MinPWM;		    // Enable when OpMode == FAN_AUTO_CTRL_OPMODE_PWM
            public UInt32 MaxPWM;		    // Enable when OpMode == FAN_AUTO_CTRL_OPMODE_PWM
            public UInt32 MinRPM;		    // Enable when OpMode == FAN_AUTO_CTRL_OPMODE_RPM
            public UInt32 MaxRPM;		    // Enable when OpMode == FAN_AUTO_CTRL_OPMODE_RPM
        }

        // Mode
        public const UInt32 SUSI_FAN_CTRL_MODE_OFF = 0;
        public const UInt32 SUSI_FAN_CTRL_MODE_FULL = 1;
        public const UInt32 SUSI_FAN_CTRL_MODE_MANUAL = 2;
        public const UInt32 SUSI_FAN_CTRL_MODE_AUTO = 3;
        public struct SusiFanControl
        {
            public UInt32 Mode;
            public UInt32 PWM;			    // Manual mode only (0 - 100%)
            public AutoFan AutoControl;     // Auto mode only
        }

        [DllImport("Susi4")]
        public static extern UInt32 SusiFanControlGetConfig(UInt32 Id, out SusiFanControl pConfig);

        [DllImport("Susi4")]
        public static extern UInt32 SusiFanControlSetConfig(UInt32 Id, ref SusiFanControl Config);
    }

    public static class SusiThermalProtection
    {
        public const UInt32 SUSI_ID_THERMAL_MAX = 4;
        public const UInt32 SUSI_ID_THERMAL_PROTECT_1 = 0x00000000;
        public const UInt32 SUSI_ID_THERMAL_PROTECT_2 = 0x00000001;
        public const UInt32 SUSI_ID_THERMAL_PROTECT_3 = 0x00000002;
        public const UInt32 SUSI_ID_THERMAL_PROTECT_4 = 0x00000003;

        // Thermal Protection value item IDs
        public const UInt32 SUSI_ID_TP_EVENT_SUPPORT_FLAGS = 0x00000000;	// Reference "Support Flags"
        public const UInt32 SUSI_ID_TP_EVENT_TRIGGER_MAXIMUM = 0x00000001;	// Send Event
        public const UInt32 SUSI_ID_TP_EVENT_TRIGGER_MINIMUM = 0x00000002;
        public const UInt32 SUSI_ID_TP_EVENT_CLEAR_MAXIMUM = 0x00000003;
        public const UInt32 SUSI_ID_TP_EVENT_CLEAR_MINIMUM = 0x00000004;

        // Thermal Protection Support Flags
        public const UInt32 SUSI_THERMAL_FLAG_SUPPORT_SHUTDOWN = 0x00000001;
        public const UInt32 SUSI_THERMAL_FLAG_SUPPORT_THROTTLE = 0x00000002;
        public const UInt32 SUSI_THERMAL_FLAG_SUPPORT_POWEROFF = 0x00000004;

        [DllImport("Susi4")]
        public static extern UInt32 SusiThermalProtectionGetCaps(UInt32 Id, UInt32 ItemId, out UInt32 pValue);


        // Thermal Protection Event type
        public const UInt32 SUSI_THERMAL_EVENT_SHUTDOWN = 0x00;
        public const UInt32 SUSI_THERMAL_EVENT_THROTTLE = 0x01;
        public const UInt32 SUSI_THERMAL_EVENT_POWEROFF = 0x02;
        public const UInt32 SUSI_THERMAL_EVENT_NONE = 0xFF;

        public struct SusiThermalProtect
        {
            public UInt32 SourceId;
            public UInt32 EventType;
            public UInt32 SendEventTemperature;		// 0.1 Kelvins
            public UInt32 ClearEventTemperature;    // 0.1 Kelvins
        }

        [DllImport("Susi4")]
        public static extern UInt32 SusiThermalProtectionSetConfig(UInt32 Id, ref SusiThermalProtect pConfig);

        [DllImport("Susi4")]
        public static extern UInt32 SusiThermalProtectionGetConfig(UInt32 Id, out SusiThermalProtect pConfig);
    }

    public static class SusiWDog
    {
        public const UInt32 SUSI_ID_WATCHDOG_MAX = 4;

        public const UInt32 SUSI_ID_WATCHDOG_1 = 0x00000000;
        public const UInt32 SUSI_ID_WATCHDOG_2 = 0x00000001;
        public const UInt32 SUSI_ID_WATCHDOG_3 = 0x00000002;
		public const UInt32 SUSI_ID_WATCHDOG_4 = 0x00000003;

        // Event Types
        public const UInt32 SUSI_WDT_EVENT_TYPE_NONE = 0x00000000;
        public const UInt32 SUSI_WDT_EVENT_TYPE_IRQ = 0x00000001;
        public const UInt32 SUSI_WDT_EVENT_TYPE_SCI = 0x00000002;
        public const UInt32 SUSI_WDT_EVENT_TYPE_PWRBTN = 0x00000003;
        public const UInt32 SUSI_WDT_EVENT_TYPE_PIN = 0x00000004;

        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate void SUSI_WDT_INT_CALLBACK(IntPtr context);

        // Item ID
		public const UInt32 SUSI_ID_WDT_SUPPORT_FLAGS = 0x00000000;
        public const UInt32 SUSI_ID_WDT_DELAY_MAXIMUM = 0x00000001;
        public const UInt32 SUSI_ID_WDT_DELAY_MINIMUM = 0x00000002;
        public const UInt32 SUSI_ID_WDT_EVENT_MAXIMUM = 0x00000003;
        public const UInt32 SUSI_ID_WDT_EVENT_MINIMUM = 0x00000004;
        public const UInt32 SUSI_ID_WDT_RESET_MAXIMUM = 0x00000005;
        public const UInt32 SUSI_ID_WDT_RESET_MINIMUM = 0x00000006;
        public const UInt32 SUSI_ID_WDT_UNIT_MINIMUM = 0x0000000F;
        public const UInt32 SUSI_ID_WDT_DELAY_TIME = 0x00010001;
        public const UInt32 SUSI_ID_WDT_EVENT_TIME = 0x00010002;
        public const UInt32 SUSI_ID_WDT_RESET_TIME = 0x00010003;
        public const UInt32 SUSI_ID_WDT_EVENT_TYPE = 0x00010004;

		// Support Flags
		public const UInt32 SUSI_WDT_FLAG_SUPPORT_IRQ = 0x00000002;
		public const UInt32 SUSI_WDT_FLAG_SUPPORT_SCI = 0x00000004;
		public const UInt32 SUSI_WDT_FLAG_SUPPORT_PWRBTN = 0x00000008;
        public const UInt32 SUSI_WDT_FLAG_SUPPORT_PIN = 0x00000010;

        [DllImport("Susi4")]
        public static extern UInt32 SusiWDogGetCaps(UInt32 Id, UInt32 ItemId, out UInt32 pValue);

        [DllImport("Susi4")]
        public static extern UInt32 SusiWDogStart(UInt32 Id, UInt32 DelayTime, UInt32 EventTime, UInt32 ResetTime, UInt32 EventType);

        [DllImport("Susi4")]
        public static extern UInt32 SusiWDogStop(UInt32 Id);

        [DllImport("Susi4")]
        public static extern UInt32 SusiWDogTrigger(UInt32 Id);

        [DllImport("Susi4")]
        public static extern UInt32 SusiWDogSetCallBack(UInt32 Id, IntPtr pfnCallback, IntPtr Context);
    }
}
